--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
       position: relative;
       z-index: 1;
     }
+
+    /* HIDE UI RULES FOR EXPORT */
+    .hide-ui .add-btn,
+    .hide-ui .actions {
+      display: none !important;
+    }
+
     .invoice-header {
       display: flex;
       justify-content: space-between;
@@ -156,7 +163,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 
   <div id="invoiceCard" class="invoice-container">
-    <!-- Replace with your multi‑color tribal pattern URL -->
+    <!-- Replace with your tribal pattern URL -->
     <img src="YOUR_TRIBAL_PATTERN_URL" class="watermark-img" alt="Watermark">
 
     <header class="invoice-header">
@@ -213,7 +220,7 @@
   </div>
 
   <script>
-    // 1) add item row
+    // 1) Add a new item row
     function addItemRow() {
       const tbody = document.querySelector('#itemsTable tbody');
       const tr = document.createElement('tr');
@@ -228,7 +235,7 @@
     }
     document.getElementById('addItem').addEventListener('click', addItemRow);
 
-    // 2) compute totals
+    // 2) Compute totals
     document.getElementById('computeBtn').addEventListener('click', () => {
       let sum = 0;
       document.querySelectorAll('#itemsTable tbody tr').forEach(tr => {
@@ -241,32 +248,23 @@
       document.getElementById('invoiceTotal').textContent = '$' + sum.toFixed(2);
     });
 
-    // 3) download clean PDF
+    // 3) Download PDF (hide UI via CSS toggle)
     document.getElementById('downloadBtn').addEventListener('click', () => {
-      const orig = document.getElementById('invoiceCard');
-      const clone = orig.cloneNode(true);
-      clone.style.position = 'absolute';
-      clone.style.top = '-9999px';
-      document.body.appendChild(clone);
-
-      // remove UI buttons
-      clone.querySelectorAll('.add-btn, .actions').forEach(el => el.remove());
-      // swap inputs for text
-      clone.querySelectorAll('input, textarea').forEach(el => {
-        const span = document.createElement('span');
-        span.textContent = el.value;
-        if (el.tagName.toLowerCase() === 'textarea') span.style.whiteSpace = 'pre-wrap';
-        el.parentNode.replaceChild(span, el);
-      });
-
+      const card = document.getElementById('invoiceCard');
+      // hide buttons
+      card.classList.add('hide-ui');
+      // export
       html2pdf().set({
         margin:    0.5,
         filename:  'estimate.pdf',
         jsPDF:     { unit: 'in', format: 'letter', orientation: 'portrait' }
       })
-      .from(clone)
+      .from(card)
       .save()
-      .finally(() => document.body.removeChild(clone));
+      .finally(() => {
+        // restore buttons
+        card.classList.remove('hide-ui');
+      });
     });
   </script>
 </body>
