--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       padding: 2rem;
       overflow: hidden;
     }
-    /* watermark as a real <img> */
     .watermark-img {
       position: absolute;
       inset: 0;
@@ -36,36 +35,19 @@
       opacity: 0.05;
       z-index: 0;
     }
-    /* content above watermark */
     .invoice-container > *:not(.watermark-img) {
       position: relative;
       z-index: 1;
     }
-
-    /* HIDE UI RULES FOR EXPORT */
+    /* hide UI during export */
     .hide-ui .add-btn,
     .hide-ui .actions {
       display: none !important;
     }
-
-    .invoice-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-    }
-    .company-left {
-      display: flex;
-      align-items: center;
-    }
-    .logo {
-      height: 60px;
-      margin-right: 1rem;
-    }
-    .company-name {
-      margin: 0;
-      color: var(--primary);
-      font-size: 1.8rem;
-    }
+    .invoice-header { display: flex; justify-content: space-between; align-items: flex-start; }
+    .company-left { display: flex; align-items: center; }
+    .logo { height: 60px; margin-right: 1rem; }
+    .company-name { margin: 0; color: var(--primary); font-size: 1.8rem; }
     .invoice-meta {
       background: var(--mid);
       border-radius: 4px;
@@ -75,23 +57,18 @@
       font-size: 0.9rem;
     }
     .invoice-meta .meta-row {
-      display: flex;
-      justify-content: space-between;
+      display: flex; justify-content: space-between;
       margin-bottom: 0.5rem;
     }
     .invoice-meta label { font-weight: bold; }
     .invoice-meta input {
-      width: 80px;
-      border: none;
-      border-radius: 2px;
-      padding: 0.2rem;
+      width: 80px; border: none; border-radius: 2px; padding: 0.2rem;
     }
     .invoice-meta .meta-total {
       background: var(--dark);
       padding: 0.6rem;
       border-radius: 3px;
-      display: flex;
-      justify-content: space-between;
+      display: flex; justify-content: space-between;
       font-weight: bold;
       margin-top: 0.5rem;
     }
@@ -102,12 +79,9 @@
     }
     .recipient strong { display: block; margin-bottom: 0.3rem; }
     .recipient input {
-      display: block;
-      width: 100%;
-      border: none;
-      border-bottom: 1px solid var(--mid);
-      margin-bottom: 0.5rem;
-      padding: 0.3rem 0;
+      display: block; width: 100%;
+      border: none; border-bottom: 1px solid var(--mid);
+      margin-bottom: 0.5rem; padding: 0.3rem 0;
     }
     .section-title {
       margin-top: 2rem;
@@ -117,9 +91,7 @@
       font-size: 1.2rem;
     }
     .items-table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1rem;
+      width: 100%; border-collapse: collapse; margin-top: 1rem;
     }
     .items-table th {
       background: var(--light);
@@ -129,16 +101,12 @@
       font-weight: normal;
     }
     .items-table td {
-      border-bottom: 1px solid #eee;
-      padding: 0.6rem;
+      border-bottom: 1px solid #eee; padding: 0.6rem;
     }
     .items-table input,
     .items-table textarea {
-      width: 100%;
-      border: 1px solid var(--mid);
-      border-radius: 3px;
-      padding: 0.3rem;
-      box-sizing: border-box;
+      width: 100%; border: 1px solid var(--mid);
+      border-radius: 3px; padding: 0.3rem; box-sizing: border-box;
     }
     .items-table textarea { resize: vertical; }
     .add-btn,
@@ -153,22 +121,24 @@
       font-size: 0.9rem;
     }
     .add-btn:hover,
-    .actions button:hover { background: var(--dark); }
+    .actions button:hover {
+      background: var(--dark);
+    }
     .actions { margin-top: 2rem; text-align: right; }
   </style>
 </head>
 <body>
 
-  <!-- html2pdf library -->
+  <!-- load html2pdf first -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 
   <div id="invoiceCard" class="invoice-container">
-    <!-- Replace with your tribal pattern URL -->
-    <img src="YOUR_TRIBAL_PATTERN_URL" class="watermark-img" alt="Watermark">
+    <!-- your tribal‑pattern watermark -->
+    <img src="YOUR_TRIBAL_PATTERN_URL" class="watermark-img" alt="">
 
     <header class="invoice-header">
       <div class="company-left">
-        <img src="https://i.imgur.com/nIdc6aB.jpeg" class="logo" alt="Elvis Of Colours Logo">
+        <img src="https://i.imgur.com/nIdc6aB.jpeg" class="logo" alt="Elvis Of Colours">
         <h1 class="company-name">Elvis Of Colours</h1>
       </div>
       <div class="invoice-meta">
@@ -220,52 +190,50 @@
   </div>
 
   <script>
-    // 1) Add a new item row
-    function addItemRow() {
-      const tbody = document.querySelector('#itemsTable tbody');
-      const tr = document.createElement('tr');
-      tr.innerHTML = `
-        <td><input type="text" placeholder="Service"></td>
-        <td><textarea rows="2" placeholder="Description…"></textarea></td>
-        <td><input type="number" value="0"></td>
-        <td><input type="number" value="0" step="0.01"></td>
-        <td class="line-total">$0.00</td>
-      `;
-      tbody.appendChild(tr);
-    }
-    document.getElementById('addItem').addEventListener('click', addItemRow);
+    window.onload = () => {
+      // Add item row
+      document.getElementById('addItem')
+        .addEventListener('click', () => {
+          const tbody = document.querySelector('#itemsTable tbody');
+          const tr = document.createElement('tr');
+          tr.innerHTML = `
+            <td><input type="text" placeholder="Service"></td>
+            <td><textarea rows="2" placeholder="Description…"></textarea></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0" step="0.01"></td>
+            <td class="line-total">$0.00</td>`;
+          tbody.appendChild(tr);
+        });
 
-    // 2) Compute totals
-    document.getElementById('computeBtn').addEventListener('click', () => {
-      let sum = 0;
-      document.querySelectorAll('#itemsTable tbody tr').forEach(tr => {
-        const qty   = parseFloat(tr.children[2].querySelector('input').value) || 0;
-        const price = parseFloat(tr.children[3].querySelector('input').value) || 0;
-        const line  = qty * price;
-        tr.querySelector('.line-total').textContent = '$' + line.toFixed(2);
-        sum += line;
-      });
-      document.getElementById('invoiceTotal').textContent = '$' + sum.toFixed(2);
-    });
+      // Compute totals
+      document.getElementById('computeBtn')
+        .addEventListener('click', () => {
+          let sum = 0;
+          document.querySelectorAll('#itemsTable tbody tr').forEach(tr => {
+            const qty   = parseFloat(tr.children[2].querySelector('input').value) || 0;
+            const price = parseFloat(tr.children[3].querySelector('input').value) || 0;
+            const line  = qty * price;
+            tr.querySelector('.line-total').textContent = '$' + line.toFixed(2);
+            sum += line;
+          });
+          document.getElementById('invoiceTotal').textContent = '$' + sum.toFixed(2);
+        });
 
-    // 3) Download PDF (hide UI via CSS toggle)
-    document.getElementById('downloadBtn').addEventListener('click', () => {
-      const card = document.getElementById('invoiceCard');
-      // hide buttons
-      card.classList.add('hide-ui');
-      // export
-      html2pdf().set({
-        margin:    0.5,
-        filename:  'estimate.pdf',
-        jsPDF:     { unit: 'in', format: 'letter', orientation: 'portrait' }
-      })
-      .from(card)
-      .save()
-      .finally(() => {
-        // restore buttons
-        card.classList.remove('hide-ui');
-      });
-    });
+      // Download PDF
+      document.getElementById('downloadBtn')
+        .addEventListener('click', () => {
+          const card = document.getElementById('invoiceCard');
+          card.classList.add('hide-ui');
+          html2pdf().set({
+            margin:    0.5,
+            filename:  'estimate.pdf',
+            jsPDF:     { unit: 'in', format: 'letter', orientation: 'portrait' }
+          })
+          .from(card)
+          .save()
+          .finally(() => card.classList.remove('hide-ui'));
+        });
+    };
   </script>
 </body>
 </html>
