--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Elvis of Colours Estimator</title>
   <style>
     :root {
@@ -12,10 +12,10 @@
       --dark:    #34495e;
     }
     body {
+      margin: 0;
+      padding: 2rem;
       background: var(--light);
       font-family: 'Helvetica Neue', Arial, sans-serif;
-      padding: 2rem;
-      margin: 0;
     }
     .invoice-container {
       position: relative;
@@ -28,8 +28,7 @@
       overflow: hidden;
     }
     .watermark-img {
-      position: absolute;
-      inset: 0;
+      position: absolute; inset: 0;
       width: 100%; height: 100%;
       object-fit: cover;
       opacity: 0.05;
@@ -39,15 +38,28 @@
       position: relative;
       z-index: 1;
     }
-    /* hide UI during export */
     .hide-ui .add-btn,
     .hide-ui .actions {
       display: none !important;
     }
-    .invoice-header { display: flex; justify-content: space-between; align-items: flex-start; }
-    .company-left { display: flex; align-items: center; }
-    .logo { height: 60px; margin-right: 1rem; }
-    .company-name { margin: 0; color: var(--primary); font-size: 1.8rem; }
+    .invoice-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+    .company-left {
+      display: flex;
+      align-items: center;
+    }
+    .logo {
+      height: 60px;
+      margin-right: 1rem;
+    }
+    .company-name {
+      margin: 0;
+      color: var(--primary);
+      font-size: 1.8rem;
+    }
     .invoice-meta {
       background: var(--mid);
       border-radius: 4px;
@@ -57,18 +69,23 @@
       font-size: 0.9rem;
     }
     .invoice-meta .meta-row {
-      display: flex; justify-content: space-between;
+      display: flex;
+      justify-content: space-between;
       margin-bottom: 0.5rem;
     }
     .invoice-meta label { font-weight: bold; }
     .invoice-meta input {
-      width: 80px; border: none; border-radius: 2px; padding: 0.2rem;
+      width: 80px;
+      border: none;
+      border-radius: 2px;
+      padding: 0.2rem;
     }
     .invoice-meta .meta-total {
       background: var(--dark);
       padding: 0.6rem;
       border-radius: 3px;
-      display: flex; justify-content: space-between;
+      display: flex;
+      justify-content: space-between;
       font-weight: bold;
       margin-top: 0.5rem;
     }
@@ -79,8 +96,8 @@
     }
     .recipient strong { display: block; margin-bottom: 0.3rem; }
     .recipient input {
-      display: block; width: 100%;
-      border: none; border-bottom: 1px solid var(--mid);
+      width: 100%; border: none;
+      border-bottom: 1px solid var(--mid);
       margin-bottom: 0.5rem; padding: 0.3rem 0;
     }
     .section-title {
@@ -101,12 +118,16 @@
       font-weight: normal;
     }
     .items-table td {
-      border-bottom: 1px solid #eee; padding: 0.6rem;
+      border-bottom: 1px solid #eee;
+      padding: 0.6rem;
     }
     .items-table input,
     .items-table textarea {
-      width: 100%; border: 1px solid var(--mid);
-      border-radius: 3px; padding: 0.3rem; box-sizing: border-box;
+      width: 100%;
+      border: 1px solid var(--mid);
+      border-radius: 3px;
+      padding: 0.3rem;
+      box-sizing: border-box;
     }
     .items-table textarea { resize: vertical; }
     .add-btn,
@@ -121,24 +142,22 @@
       font-size: 0.9rem;
     }
     .add-btn:hover,
-    .actions button:hover {
-      background: var(--dark);
-    }
+    .actions button:hover { background: var(--dark); }
     .actions { margin-top: 2rem; text-align: right; }
   </style>
 </head>
 <body>
-
-  <!-- load html2pdf first -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+  <!-- Load html2canvas & jsPDF -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
   <div id="invoiceCard" class="invoice-container">
-    <!-- your tribal‑pattern watermark -->
+    <!-- Multi‑color tribal watermark (replace URL!) -->
     <img src="YOUR_TRIBAL_PATTERN_URL" class="watermark-img" alt="">
 
     <header class="invoice-header">
       <div class="company-left">
-        <img src="https://i.imgur.com/nIdc6aB.jpeg" class="logo" alt="Elvis Of Colours">
+        <img src="https://i.imgur.com/nIdc6aB.jpeg" class="logo" alt="Elvis Of Colours Logo">
         <h1 class="company-name">Elvis Of Colours</h1>
       </div>
       <div class="invoice-meta">
@@ -191,48 +210,54 @@
 
   <script>
     window.onload = () => {
-      // Add item row
-      document.getElementById('addItem')
-        .addEventListener('click', () => {
-          const tbody = document.querySelector('#itemsTable tbody');
-          const tr = document.createElement('tr');
-          tr.innerHTML = `
-            <td><input type="text" placeholder="Service"></td>
-            <td><textarea rows="2" placeholder="Description…"></textarea></td>
-            <td><input type="number" value="0"></td>
-            <td><input type="number" value="0" step="0.01"></td>
-            <td class="line-total">$0.00</td>`;
-          tbody.appendChild(tr);
-        });
+      const { jsPDF } = window.jspdf;
 
-      // Compute totals
-      document.getElementById('computeBtn')
-        .addEventListener('click', () => {
-          let sum = 0;
-          document.querySelectorAll('#itemsTable tbody tr').forEach(tr => {
-            const qty   = parseFloat(tr.children[2].querySelector('input').value) || 0;
-            const price = parseFloat(tr.children[3].querySelector('input').value) || 0;
-            const line  = qty * price;
-            tr.querySelector('.line-total').textContent = '$' + line.toFixed(2);
-            sum += line;
-          });
-          document.getElementById('invoiceTotal').textContent = '$' + sum.toFixed(2);
-        });
+      document.getElementById('addItem').onclick = () => {
+        const tbody = document.querySelector('#itemsTable tbody');
+        const tr = document.createElement('tr');
+        tr.innerHTML = `
+          <td><input type="text" placeholder="Service"></td>
+          <td><textarea rows="2" placeholder="Description…"></textarea></td>
+          <td><input type="number" value="0"></td>
+          <td><input type="number" value="0" step="0.01"></td>
+          <td class="line-total">$0.00</td>`;
+        tbody.appendChild(tr);
+      };
 
-      // Download PDF
-      document.getElementById('downloadBtn')
-        .addEventListener('click', () => {
-          const card = document.getElementById('invoiceCard');
-          card.classList.add('hide-ui');
-          html2pdf().set({
-            margin:    0.5,
-            filename:  'estimate.pdf',
-            jsPDF:     { unit: 'in', format: 'letter', orientation: 'portrait' }
-          })
-          .from(card)
-          .save()
-          .finally(() => card.classList.remove('hide-ui'));
+      document.getElementById('computeBtn').onclick = () => {
+        let sum = 0;
+        document.querySelectorAll('#itemsTable tbody tr').forEach(tr => {
+          const qty   = parseFloat(tr.children[2].querySelector('input').value) || 0;
+          const price = parseFloat(tr.children[3].querySelector('input').value) || 0;
+          const line  = qty * price;
+          tr.querySelector('.line-total').textContent = '$' + line.toFixed(2);
+          sum += line;
         });
+        document.getElementById('invoiceTotal').textContent = '$' + sum.toFixed(2);
+      };
+
+      document.getElementById('downloadBtn').onclick = async () => {
+        const card = document.getElementById('invoiceCard');
+        card.classList.add('hide-ui');
+
+        // allow CSS to apply
+        await new Promise(r => setTimeout(r, 100));
+
+        // capture with html2canvas
+        html2canvas(card, { scale: 2 }).then(canvas => {
+          const imgData = canvas.toDataURL('image/png');
+          const pdf = new jsPDF({ unit: 'pt', format: 'letter' });
+          const pageW = pdf.internal.pageSize.getWidth();
+          const pageH = pdf.internal.pageSize.getHeight();
+          // fit image to page
+          const ratio = Math.min(pageW / canvas.width, pageH / canvas.height);
+          const imgW = canvas.width * ratio;
+          const imgH = canvas.height * ratio;
+          pdf.addImage(imgData, 'PNG', (pageW - imgW)/2, 40, imgW, imgH);
+          pdf.save('estimate.pdf');
+          card.classList.remove('hide-ui');
+        });
+      };
     };
   </script>
 </body>
